# pdffigures2

./: .env.example  .gitignore  Dockerfile  app.py  build.sbt  docker-compose.yml  helpers.py  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: release-image.yml
app/: celery_tasks.py  constants.py  helpers.py  main.py
experiments/: section_extractions.ipynb
