[tool.poetry]
name = "pdffigures2"
version = "0.1.0"
description = ""
authors = ["Boon Chong Peh <pehboonchong@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
loguru = "^0.7.2"
celery = "^5.4.0"
python-dotenv = "^1.0.1"
flower = "^2.0.1"
redis = "^5.1.1"
python-multipart = "^0.0.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
python-multipart = "^0.0.12"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"